@@ -1,3 +1,10 @@
+Fri Jun 19 11:14:51 BST 2009  Tom Mortimer <tom@flax.co.uk>
+
+    * xappy/indexerconnection.py: Allow PrefixedTermIter to take an 
+      explicit trim length (for removing prefix).
+    * xappy/searchconnection.py: Added optional starts_with parameter
+      to iter_terms_for_field().
+
 Tue May 26 07:54:48 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Don't recalculate all the potentials
